<resources>
    <string name="app_name">NiuGu</string>

    <string name="pull_refresh">下拉刷新</string>
    <string name="release_refresh">释放刷新</string>
    <string name="refresh_finish">刷新完成</string>
    <string name="updating">更新中</string>

    <string name="default_char">--</string>

    <!-- 页面名称 -->
    <string name="main_navigation_home">头条</string>
    <string name="main_navigation_im">自选股</string>
    <string name="main_navigation_interest">行情</string>
    <string name="main_navigation_user">我的</string>

    <string name="uad_calendar">涨跌日历</string>
    <string name="invest_calendar">推荐日历</string>
    <!--页面编辑按钮-->
    <string name="text_title_edite">编辑</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="nodata_hint">没有相关数据</string>
    <string name="nomoredata_hint">没有更多数据</string>
    <string name="net_erro_hint">数据请求出错</string>

    <string name="my_header_hint">今日还没阅读推荐线索，别放过机会</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_search_stock">SearchStockActivity</string>
    <string name="title_activity_hotindustry">HotIndustryActivity</string>
    <string name="title_activity_markttitle">MarketTitleActivity</string>
    <string name="title_activity_stock_decision">StockDecisionActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_stock_one_minute">StockOneMinuteActivity</string>
    <string name="title_activity_market_refresh">MarketRefreshActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_find_code">FindCodeActivity</string>
    <string name="title_activity_set_code">SetCodeActivity</string>
    <string name="stock_fund_plate">请输入股票代码／名称／拼音</string>
    <string name="no_data">“这只股票暂时没有相关内容”</string>
    <string name="weixin_login">微信登录</string>
    <string name="By_institutions_inside_alternative_free_free_points">云端备份自选股、VIP阅读权限</string>
    <string name="event_collection">事件收藏</string>
    <string name="my_comment">我的评论</string>
    <string name="messagetoast">消息中心</string>
    <string name="stock_decision">文字一分钟</string>
    <string name="stockoneminut">数据一分钟</string>
    <string name="tradecompare">同业比较</string>
    <string name="yanwang">研网</string>
    <string name="the_race">寻宝大赛</string>
    <string name="go_goal_stock_selection">Go-Goal选股</string>
    <string name="setting">设置</string>
    <string name="title_activity_sucess">SucessActivity</string>
    <string name="title_activity_stock_detail">StockDetailActivity</string>
    <string name="title_activity_stock_detail_charts">StockDetailChartsActivity</string>

    <!--个股和大盘页面图表表头-->
    <string-array name="stock_detail_chart_titles">
        <item>@string/times</item>
        <item>@string/five_days</item>
        <item>@string/day_k</item>
        <item>@string/week_k</item>
        <item>@string/month_k</item>
    </string-array>


    <!-- 股票详细信息界面 -->
    <string name="volume">成交</string>
    <string name="time">时间</string>
    <string name="times">分时</string>
    <string name="five_days">五日</string>
    <string name="day_k">日K</string>
    <string name="week_k">周K</string>
    <string name="month_k">月K</string>
    <string name="five_range">五档</string>
    <string name="detail">明细</string>
    <string name="fen_jia">分价</string>
    <string name="price">价格</string>
    <string name="amplitude">涨幅</string>
    <string name="avg_price">均价</string>
    <string name="open">开</string>
    <string name="high">高</string>
    <string name="low">低</string>
    <string name="close">收</string>

    <!-- 涨跌日历界面 -->
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_landscape">LandscapeActivity</string>
    <string name="title_activity_stock_detail_news_list_data">StockDetailNewsListDataActivity</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="title_activity_stock_detail_market_index">StockDetailMarketIndexActivity</string>
    <string name="title_activity_wechart_login">WechartLoginActivity</string>
    <string name="title_activity_my_comment">MyCommentActivity</string>
    <string name="title_activity_statement">StatementActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_agreement_activty">AgreementActivty</string>

    <string name="agreement">收</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_using_help">UsingHelpActivity</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_net_test">NetTestActivity</string>

    <string name="title_activity_un_bind_go_goal">UnBindGoGoalActivity</string>
    <string name="title_activity_org_forcast">OrgForcastActivity</string>
    <string name="calendar_day_in">持有0日总涨幅</string>
    <string name="title_activity_market_compare">MarketCompareActivity</string>
    <string name="title_activity_industry_compare_fragment">IndustryCompareFragment</string>
    <string name="title_activity_stock_detail_comment_acticity">StockDetailCommentActicity</string>
    <string name="default__">--</string>
</resources>
