<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header_tips"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_tips"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/refresh_finish"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/header_stats"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_arrows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/arrows" />

        <TextView
            android:id="@+id/tv_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="#C9C9C9"
            android:text="@string/pull_refresh"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/header_loading"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/img_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/loading" />

        <TextView
            android:id="@+id/tv_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="#C9C9C9"
            android:text="@string/updating"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/header_toast"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#d5e9f7"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_toast"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#d5e9f7"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="牛股头条引擎更新10条信息"
            android:textColor="#2a90d7"
            android:textSize="12sp" />

    </LinearLayout>
</FrameLayout>