<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/kline_detail"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tv_kline_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_15" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:id="@+id/tv_kline_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/default_char"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:id="@+id/tv_kline_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/default_char"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:id="@+id/tv_kline_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/default_char"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:id="@+id/tv_kline_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/default_char"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amplitude"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:id="@+id/tv_kline_amplitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/default_char"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/times_detail"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tv_times_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_15" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:id="@+id/tv_times_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/default_char"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amplitude"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:id="@+id/tv_times_price_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/default_char"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:id="@+id/tv_times_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/default_char"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avg_price"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:id="@+id/tv_times_avg_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/default_char"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/load_animation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tab_stock_detail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/head_stock_detail_charts"
        android:layout_marginLeft="@dimen/space_4"
        android:layout_marginRight="@dimen/space_4">

        <hply.com.niugu.ProgressWheel
            android:id="@+id/progress_wheel"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            app:matProg_barColor="#5588FF"
            app:matProg_progressIndeterminate="true" />

        <TextView
            android:id="@+id/tv_cantGetData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="暂时无法获取数据"
            android:textColor="@color/gray"
            android:textSize="25sp"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tab_stock_detail"
        android:layout_alignLeft="@+id/load_animation"
        android:layout_alignStart="@+id/load_animation"
        android:layout_below="@+id/kline_detail"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/fragment_stock_detail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/authority_blog"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/rect_shape"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/no_authority"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center"
                android:text="不复权"
                android:textSize="@dimen/text_size_12" />


            <TextView
                android:id="@+id/before_authority"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center"
                android:text="前复权"
                android:textSize="@dimen/text_size_12" />


            <TextView
                android:id="@+id/after_authority"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center"
                android:text="后复权"
                android:textSize="@dimen/text_size_12" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@color/gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center"
                android:text="成交量"
                android:textColor="@color/piechart_bule"
                android:textSize="@dimen/text_size_12" />

        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_stock_detail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@color/main_bg"
        android:paddingBottom="@dimen/text_size_3"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/tabSelected_word1min"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/tabSelected_word1min"
        app:tabTextAppearance="@style/TabLayoutTextStyle"
        app:tabTextColor="@color/gray" />

    <LinearLayout
        android:id="@+id/head_stock_detail_charts"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_stock_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/default_char"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/tv_stock_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/default_char"
            android:textSize="@dimen/text_size_15" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:id="@+id/tv_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/default_char"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/default_char"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@drawable/selector_background"
            android:src="@drawable/close"
            android:contentDescription="@null" />

    </LinearLayout>
</RelativeLayout>
